--- a/app/src/main/res/layout/home_fragment_common_oneimage.xml
+++ b/app/src/main/res/layout/home_fragment_common_oneimage.xml
@@ -17,8 +17,7 @@
             android:orientation="vertical"
             android:layout_marginTop="5dp"
             android:layout_width="0dp"
-            android:layout_height="90dp"
-        >
+            android:layout_height="90dp">
 
             <TextView
                 android:id="@+id/id_home_fragment_shaoya_mTitle"
