--- a/app/src/main/res/layout/video_fragment_home.xml
+++ b/app/src/main/res/layout/video_fragment_home.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="Video"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+    <ListView
+        android:id="@+id/id_video_fragment_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
 
 </LinearLayout>
