--- a/app/src/main/res/layout/video_fragment_home_listviewdetails.xml
+++ b/app/src/main/res/layout/video_fragment_home_listviewdetails.xml
@@ -2,20 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:id="@+id/id_video_fragment_listview_videoabbre"
+        android:src="@drawable/profile_bg"
+        android:scaleType="centerCrop"
+        android:layout_marginRight="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_height="200dp"
+        android:layout_width="match_parent" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
         <TextView
+            android:id="@+id/id_video_fragment_listview_textabbre"
+            android:text="简介"
+            android:layout_marginTop="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/id_video_fragment_listview_views"
+            android:text="浏览次数"
+            android:layout_marginTop="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
