--- a/app/src/main/res/layout/video_fragment_home.xml
+++ b/app/src/main/res/layout/video_fragment_home.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_marginBottom="20dp"
+    android:layout_marginBottom="15dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ListView
+        android:paddingBottom="15dp"
         android:id="@+id/id_video_fragment_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></ListView>
