--- a/app/src/main/res/layout/contact_fragment_home.xml
+++ b/app/src/main/res/layout/contact_fragment_home.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:background="#020000"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="Contact"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+    <WebView
+        android:layout_marginBottom="50dp"
+        android:id="@+id/id_contact_fragment_webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></WebView>
 
 </LinearLayout>
