--- a/app/src/main/res/layout/video_fragment_home_listviewdetails.xml
+++ b/app/src/main/res/layout/video_fragment_home_listviewdetails.xml
@@ -22,7 +22,8 @@
         android:layout_width="match_parent">
         <TextView
             android:id="@+id/id_video_fragment_listview_textabbre"
-            android:text="简介"
+            android:text=""
+            android:textSize="18sp"
             android:lineSpacingMultiplier="1.3"
             android:layout_marginTop="12dp"
             android:layout_width="match_parent"
@@ -30,7 +31,7 @@
 
         <TextView
             android:id="@+id/id_video_fragment_listview_views"
-            android:text="浏览次数"
+            android:text=""
             android:textColor="#201aa8"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="10dp"
