--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".home.activity.HomeActivity">
 
-    <com.mantianhong.common.CustomViewPager
+    <com.mantianhong.utiltools.CustomViewPager
         android:id="@+id/id_home_customviewpage"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
