--- a/app/src/main/res/layout/home_fragment_home.xml
+++ b/app/src/main/res/layout/home_fragment_home.xml
@@ -15,12 +15,12 @@
         app:tabSelectedTextColor="#f4fd00"
         app:tabTextColor="#ffffff"></android.support.design.widget.TabLayout>
 
-    <com.mantianhong.common.CustomViewPager
+    <com.mantianhong.utiltools.CustomViewPager
         android:layout_marginTop="0dp"
         android:layout_marginBottom="50dp"
         android:id="@+id/id_home_fragment_top_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </com.mantianhong.common.CustomViewPager>
+    </com.mantianhong.utiltools.CustomViewPager>
 
 </LinearLayout>
