--- a/app/src/main/res/layout/video_fragment_home.xml
+++ b/app/src/main/res/layout/video_fragment_home.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/id_video_fragment_more"
+        android:text="更多视频，点击进入"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <ListView
         android:id="@+id/id_video_fragment_listview"
         android:layout_marginBottom="50dp"
