--- a/app/src/main/res/layout/mine_fragment_home.xml
+++ b/app/src/main/res/layout/mine_fragment_home.xml
@@ -18,13 +18,18 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/id_mine_fragment_logout"
+                android:background="@drawable/mine_fragment_logout_bg"
                 android:text="注 销"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"
                 android:layout_marginTop="10dp"
                 android:textColor="#ffffff"
                 android:layout_gravity="right"
                 android:gravity="right"
-                android:layout_marginRight="15dp"
-                android:layout_width="match_parent"
+                android:layout_marginRight="10dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <ImageView
                 android:id="@+id/id_mine_fragment_loginmypic"
