--- a/app/src/main/res/layout/mine_fragment_mycommentdetails.xml
+++ b/app/src/main/res/layout/mine_fragment_mycommentdetails.xml
@@ -6,33 +6,42 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/id_mine_fragment_mycomment_img"
         android:src="@drawable/xh_01"
         android:layout_width="40dp"
         android:layout_height="wrap_content" />
 
     <LinearLayout
+        android:id="@+id/id_mine_fragment_mycomment_linearlayout"
         android:layout_marginLeft="15dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/id_mine_fragment_mycomment_message"
             android:text="评论内容"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="10dp"
             android:lineSpacingMultiplier="1.3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/id_mine_fragment_mycomment_title"
             android:text="标题"
+            android:textColor="#040000"
+            android:textSize="18sp"
             android:layout_marginBottom="10dp"
             android:lineSpacingMultiplier="1.3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/id_mine_fragment_mycomment_postdatetime"
             android:text="发表时间"
             android:textSize="10sp"
+            android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
