--- a/app/src/main/res/layout/home_fragment_home.xml
+++ b/app/src/main/res/layout/home_fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -16,6 +16,7 @@
         app:tabTextColor="#ffffff"></android.support.design.widget.TabLayout>
 
     <com.mantianhong.utiltools.CustomViewPager
+        android:layout_below="@+id/id_home_fragment_tablayout"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="50dp"
         android:id="@+id/id_home_fragment_top_tab"
@@ -23,4 +24,32 @@
         android:layout_height="wrap_content">
     </com.mantianhong.utiltools.CustomViewPager>
 
-</LinearLayout>
+    <!--  浮动按钮  -->
+    <ImageButton
+        android:id="@+id/id_home_fragment_search"
+        android:background="@android:color/transparent"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:src="@drawable/search"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="160dp"
+        android:elevation="1dp"
+        />
+
+    <!--  浮动按钮  -->
+    <ImageButton
+        android:id="@+id/id_home_fragment_newtopic"
+        android:background="@android:color/transparent"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:src="@drawable/newtopic"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="106dp"
+        android:elevation="1dp"
+        />
+
+</RelativeLayout>
