--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -62,6 +62,24 @@
                 android:layout_width="1dp"
                 android:layout_height="40dp"/>
 
+            <!--新帖-->
+            <RadioButton
+                android:id="@+id/id_home_radiobutton_newpost"
+                style="@style/home_tab"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:drawableTop="@drawable/home_bottom_tab_newpost_bg"
+                android:textColor="@drawable/home_bottom_tab_home_text"
+                android:text=""/>
+
+            <View
+                android:background="#e0dede"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_width="1dp"
+                android:layout_height="40dp"/>
+
             <!--联系-->
             <RadioButton
                 android:id="@+id/id_home_radiobutton_contact"
