--- a/app/src/main/res/layout/home_fragment_home.xml
+++ b/app/src/main/res/layout/home_fragment_home.xml
@@ -35,7 +35,6 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="106dp"
-        android:elevation="1dp"
-        />
+        android:elevation="1dp" />
 
 </RelativeLayout>
