--- a/app/src/main/res/layout/post_newarticle_activity.xml
+++ b/app/src/main/res/layout/post_newarticle_activity.xml
@@ -48,48 +48,56 @@
             android:layout_height="44dp" />
 
         <LinearLayout
-            android:layout_margin="5dp"
+            android:layout_marginBottom="8dp"
             android:orientation="horizontal"
             android:background="#6c0e24"
             android:layout_width="match_parent"
-            android:paddingBottom="5dp"
-            android:layout_height="80dp">
+            android:paddingBottom="0dp"
+            android:layout_height="78dp">
 
             <ImageView
                 android:layout_weight="1"
                 android:id="@+id/id_post_newarticle_pic01_imageview"
                 android:src="@drawable/toadd"
                 android:layout_width="0dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginLeft="2dp"
                 android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_height="80dp" />
+                android:layout_marginTop="0dp"
+                android:layout_height="78dp" />
 
             <ImageView
                 android:layout_weight="1"
                 android:id="@+id/id_post_newarticle_pic02_imageview"
                 android:src="@drawable/toadd"
                 android:layout_width="0dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginLeft="2dp"
                 android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_height="80dp" />
+                android:layout_marginTop="0dp"
+                android:layout_height="78dp" />
 
             <ImageView
                 android:layout_weight="1"
                 android:id="@+id/id_post_newarticle_pic03_imageview"
                 android:src="@drawable/toadd"
                 android:layout_width="0dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginLeft="2dp"
                 android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_height="80dp" />
+                android:layout_marginTop="0dp"
+                android:layout_height="78dp" />
 
             <ImageView
                 android:layout_weight="1"
                 android:id="@+id/id_post_newarticle_pic04_imageview"
                 android:src="@drawable/toadd"
                 android:layout_width="0dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginLeft="2dp"
                 android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_height="80dp" />
+                android:layout_marginTop="0dp"
+                android:layout_height="78dp" />
 
         </LinearLayout>
 
