--- a/app/src/main/res/layout/post_newarticle_activity.xml
+++ b/app/src/main/res/layout/post_newarticle_activity.xml
@@ -20,20 +20,6 @@
         android:layout_height="290dp">
 
         <EditText
-            android:id="@+id/id_post_newarticle_content_edittext"
-            android:background="@drawable/home_article_comment_bg"
-            android:gravity="top"
-            android:textSize="12sp"
-            android:hint="请输入帖子内容(至少20个字)"
-            android:paddingTop="3dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="0dp"
-            android:layout_margin="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="100dp" />
-
-        <EditText
             android:id="@+id/id_post_newarticle_title_edittext"
             android:background="@drawable/home_article_comment_bg"
             android:gravity="top"
@@ -47,11 +33,25 @@
             android:layout_width="match_parent"
             android:layout_height="44dp" />
 
+        <EditText
+            android:id="@+id/id_post_newarticle_content_edittext"
+            android:background="@drawable/home_article_comment_bg"
+            android:gravity="top"
+            android:textSize="12sp"
+            android:hint="请输入帖子内容(至少20个字)"
+            android:paddingTop="3dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="0dp"
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
+
         <!--android:background="#6c0e24"-->
         <LinearLayout
             android:layout_marginBottom="8dp"
             android:orientation="horizontal"
-            android:background="#81816d"
+            android:background="#f5ecec"
             android:layout_width="match_parent"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="5dp"
