--- a/app/src/main/res/layout/home_search_activity.xml
+++ b/app/src/main/res/layout/home_search_activity.xml
@@ -19,26 +19,30 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp" />
 
+        <!--android:background="#ffffff"-->
         <EditText
             android:id="@+id/id_home_search_edittext"
-            android:layout_marginRight="68dp"
+            android:paddingLeft="10dp"
+            android:layout_marginRight="78dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:background="#ffffff"
+            android:background="@drawable/home_search_edittext_bg"
             android:layout_width="200dp"
             android:layout_height="38dp" />
 
         <Button
             android:id="@+id/id_home_search_button"
+            android:background="@drawable/home_search_edittext_bg"
             android:textAlignment="center"
             android:layout_marginRight="8dp"
             android:gravity="center"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:textColor="#040000"
             android:textSize="13dp"
             android:text="搜 索"
             android:layout_width="60dp"
-            android:layout_height="50dp" />
+            android:layout_height="38dp" />
 
     </RelativeLayout>
 
