--- a/app/src/main/res/layout/home_articile_comment_activity.xml
+++ b/app/src/main/res/layout/home_articile_comment_activity.xml
@@ -33,6 +33,11 @@
             android:layout_width="match_parent"
             android:layout_height="100dp" />
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/id_home_article_comment_textview"
             android:enabled="false"
@@ -45,8 +50,21 @@
             android:layout_marginTop="0dp"
             android:layout_marginBottom="10dp"
             android:layout_marginRight="25dp"
-            android:layout_width="55dp"
+            android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="30dp" />
+
+            <TextView
+                android:id="@+id/id_home_article_comment_status"
+                android:text="评论内容不得少于5个字"
+                android:textColor="#ff0012"
+                android:layout_weight="5"
+                android:gravity="bottom"
+                android:layout_width="0dp"
+                android:layout_height="30dp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
